@@ -13,8 +13,10 @@ import net.sf.jasperreports.engine.JasperPrint;
 import net.sf.jasperreports.engine.JasperReport;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.OffsetDateTime;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -26,8 +28,8 @@ public class PhvObsoleteIdleReportService {
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     public void generate(CommandLineOptions options) throws Exception {
-        Path inputPath = Path.of(options.inputJsonPath());
-        Path outputPath = Path.of(options.outputPdfPath());
+        Path inputPath = Paths.get(options.inputJsonPath());
+        Path outputPath = Paths.get(options.outputPdfPath());
         Path templatePath = resolveTemplatePath(options.templatePath());
 
         List<PhvObsoleteIdleRow> rows = readRows(inputPath);
@@ -69,13 +71,13 @@ public class PhvObsoleteIdleReportService {
 
     private List<PhvObsoleteIdleRow> readRows(Path inputPath) throws IOException {
         return objectMapper.readValue(
-                Files.readString(inputPath),
+                new String(Files.readAllBytes(inputPath), StandardCharsets.UTF_8),
                 new TypeReference<List<PhvObsoleteIdleRow>>() {
                 });
     }
 
     private String formatDate(String value) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             return value;
         }
 
@@ -103,16 +105,26 @@ public class PhvObsoleteIdleReportService {
     }
 
     private Path resolveTemplatePath(String fallbackTemplatePath) throws IOException {
+        // 1. Prefer the CLI --template argument when it points to an existing file
+        if (fallbackTemplatePath != null && !fallbackTemplatePath.trim().isEmpty()) {
+            Path cliPath = Paths.get(fallbackTemplatePath);
+            if (Files.exists(cliPath)) {
+                return cliPath;
+            }
+        }
+
+        // 2. Fall back to the path from pathConfig.properties
         String reportType = "obsolete";
         if (fallbackTemplatePath != null && fallbackTemplatePath.toLowerCase().contains("damage")) {
             reportType = "damage";
         }
 
         String configuredPath = new ReadPath().getPath(reportType);
-        if (configuredPath != null && !configuredPath.isBlank()) {
-            return Path.of(configuredPath);
+        if (configuredPath != null && !configuredPath.trim().isEmpty()) {
+            return Paths.get(configuredPath);
         }
 
-        return Path.of(fallbackTemplatePath);
+        // 3. Last resort: return the CLI path even if it doesn't exist (will fail with a clear error)
+        return Paths.get(fallbackTemplatePath);
     }
 }
